--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "private": true,
   "name": "online-editor",
   "version": "0.0.0",
+  "homepage": ".",
   "license": "MIT",
   "scripts": {
-    "build": "preact build",
+    "build": "preact build --no-prerender",
     "serve": "sirv build --cors --single",
     "dev": "preact watch",
     "lint": "eslint src",
@@ -26,9 +27,13 @@
     "jest-preset-preact": "^1.0.0",
     "preact-cli": "^3.0.0-rc.6",
     "preact-render-spy": "^1.2.1",
-    "sirv-cli": "^0.4.5"
+    "sirv-cli": "^0.4.5",
+    "webpack-bundle-analyzer": "^3.8.0"
   },
   "dependencies": {
+    "ansi_up": "^4.0.4",
+    "google-protobuf": "^3.12.1",
+    "history": "^4.10.1",
     "monaco-editor": "^0.20.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
     "preact": "^10.3.2",
