--- a/package.json
+++ b/package.json
@@ -1,56 +1,62 @@
 {
-  "private": true,
   "name": "online-editor",
-  "version": "0.0.0",
-  "homepage": ".",
-  "license": "MIT",
-  "scripts": {
-    "build": "preact build --no-prerender --max-old-space-size=4096",
-    "serve": "sirv build --cors --single",
-    "dev": "preact watch",
-    "lint": "eslint src",
-    "test": "jest"
-  },
-  "eslintConfig": {
-    "extends": "preact",
-    "ignorePatterns": [
-      "build/"
-    ]
-  },
-  "devDependencies": {
-    "dynamic-cdn-webpack-plugin": "^5.0.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-preact-pure": "^2.0.0",
-    "eslint": "^6.0.1",
-    "eslint-config-preact": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.9.0",
-    "jest-preset-preact": "^1.0.0",
-    "module-to-cdn": "^3.1.5",
-    "preact-cli": "^3.0.0-rc.6",
-    "preact-render-spy": "^1.2.1",
-    "sirv-cli": "^0.4.5",
-    "webpack-bundle-analyzer": "^3.8.0"
-  },
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.43",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-sortable-tree": "^0.3.11",
+    "@types/react-sortable-tree-theme-file-explorer": "0.0.0",
     "ansi_up": "^4.0.4",
     "antd": "^4.3.1",
-    "google-protobuf": "^3.12.1",
+    "concent": "^2.6.4",
+    "google-protobuf": "^3.12.2",
     "history": "^4.10.1",
     "monaco-editor": "^0.20.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
-    "preact": "^10.3.2",
-    "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
     "react-sortable-tree": "^2.7.1",
-    "react-sortable-tree-theme-file-explorer": "^2.0.0"
+    "react-sortable-tree-theme-file-explorer": "^2.0.0",
+    "typescript": "^3.7.5"
   },
-  "jest": {
-    "preset": "jest-preset-preact",
-    "setupFiles": [
-      "<rootDir>/tests/__mocks__/browserMocks.js",
-      "<rootDir>/tests/__mocks__/setupTests.js"
+  "scripts": {
+    "start2": "react-scripts start",
+    "build2": "react-scripts build",
+    "test2": "react-scripts test",
+    "eject2": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app",
+    "ignorePatterns": [
+      "**/*_pb.js"
     ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.1.6"
   }
 }
