--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-sortable-tree": "^0.3.11",
     "@types/react-sortable-tree-theme-file-explorer": "0.0.0",
+    "@types/uuid": "^8.0.0",
     "ansi_up": "^4.0.4",
     "antd": "^4.3.1",
     "concent": "^2.6.4",
     "google-protobuf": "^3.12.2",
     "history": "^4.10.1",
     "monaco-editor": "^0.20.0",
-    "monaco-editor-webpack-plugin": "^1.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -57,6 +57,8 @@
     ]
   },
   "devDependencies": {
-    "react-app-rewired": "^2.1.6"
+    "monaco-editor-webpack-plugin": "^1.9.0",
+    "react-app-rewired": "^2.1.6",
+    "ts-protoc-gen": "^0.12.0"
   }
 }
