--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "customize-cra": "^1.0.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
     "react-app-rewired": "^2.1.6",
     "ts-protoc-gen": "^0.12.0"
