--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "online-editor",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.2.1",
